wrote create table and drop table queries in sql_queries, upadted passworda and username inputs in other files

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
+    "config = {}\n",
+    "exec(open('config.py').read(), config)\n",
+    "user = config['user']\n",
+    "password = config['password']\n",
+    "conn = psycopg2.connect(f\"host=127.0.0.1 dbname=sparkifydb user={user} password= {password}\")\n",
     "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
