--- a/test.ipynb
+++ b/test.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "'Connected: sm1@sparkifydb'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://sm1:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -69,13 +69,72 @@
        "        <th>location</th>\n",
        "        <th>user_agent</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>94</td>\n",
+       "        <td>2018-11-11 23:42:28.796000</td>\n",
+       "        <td>26</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>480</td>\n",
+       "        <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>94</td>\n",
+       "        <td>2018-11-11 23:42:28.796000</td>\n",
+       "        <td>26</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>480</td>\n",
+       "        <td>San Jose-Sunnyvale-Santa Clara, CA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>298</td>\n",
+       "        <td>2018-11-23 23:08:48.796000</td>\n",
+       "        <td>47</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>488</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>298</td>\n",
+       "        <td>2018-11-23 23:08:48.796000</td>\n",
+       "        <td>47</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>488</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>156</td>\n",
+       "        <td>2018-11-18 23:02:44.796000</td>\n",
+       "        <td>86</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>687</td>\n",
+       "        <td>La Crosse-Onalaska, WI-MN</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2062.94 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(94, datetime.datetime(2018, 11, 11, 23, 42, 28, 796000), 26, 'free', None, None, 480, 'San Jose-Sunnyvale-Santa Clara, CA', '\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (94, datetime.datetime(2018, 11, 11, 23, 42, 28, 796000), 26, 'free', None, None, 480, 'San Jose-Sunnyvale-Santa Clara, CA', '\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (298, datetime.datetime(2018, 11, 23, 23, 8, 48, 796000), 47, 'free', None, None, 488, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (298, datetime.datetime(2018, 11, 23, 23, 8, 48, 796000), 47, 'free', None, None, 488, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"'),\n",
+       " (156, datetime.datetime(2018, 11, 18, 23, 2, 44, 796000), 86, 'free', None, None, 687, 'La Crosse-Onalaska, WI-MN', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2062.94 Safari/537.36\"')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +153,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://sm1:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -108,13 +167,52 @@
        "        <th>gender</th>\n",
        "        <th>level</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>69</td>\n",
+       "        <td>Anabelle</td>\n",
+       "        <td>Simpson</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>69</td>\n",
+       "        <td>Anabelle</td>\n",
+       "        <td>Simpson</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>69</td>\n",
+       "        <td>Anabelle</td>\n",
+       "        <td>Simpson</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>32</td>\n",
+       "        <td>Lily</td>\n",
+       "        <td>Burns</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>75</td>\n",
+       "        <td>Joseph</td>\n",
+       "        <td>Gutierrez</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(69, 'Anabelle', 'Simpson', 'F', 'free'),\n",
+       " (69, 'Anabelle', 'Simpson', 'F', 'free'),\n",
+       " (69, 'Anabelle', 'Simpson', 'F', 'free'),\n",
+       " (32, 'Lily', 'Burns', 'F', 'free'),\n",
+       " (75, 'Joseph', 'Gutierrez', 'M', 'free')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +231,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://sm1:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -147,10 +245,127 @@
        "        <th>year</th>\n",
        "        <th>duration</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SONHOTT12A8C13493C</td>\n",
+       "        <td>Something Girls</td>\n",
+       "        <td>AR7G5I41187FB4CE6C</td>\n",
+       "        <td>1982</td>\n",
+       "        <td>233.40363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOIAZJW12AB01853F1</td>\n",
+       "        <td>Pink World</td>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>1984</td>\n",
+       "        <td>269.81832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOFSOCN12A8C143F5D</td>\n",
+       "        <td>Face the Ashes</td>\n",
+       "        <td>ARXR32B1187FB57099</td>\n",
+       "        <td>2007</td>\n",
+       "        <td>209.60608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOHKNRJ12A6701D1F8</td>\n",
+       "        <td>Drop of Rain</td>\n",
+       "        <td>AR10USD1187B99F3F1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>189.57016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOQHXMF12AB0182363</td>\n",
+       "        <td>Young Boy Blues</td>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>0</td>\n",
+       "        <td>218.77506</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, Decimal('233.40363')),\n",
+       " ('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, Decimal('269.81832')),\n",
+       " ('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, Decimal('209.60608')),\n",
+       " ('SOHKNRJ12A6701D1F8', 'Drop of Rain', 'AR10USD1187B99F3F1', 0, Decimal('189.57016')),\n",
+       " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, Decimal('218.77506'))]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM songs LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://sm1:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>name</th>\n",
+       "        <th>location</th>\n",
+       "        <th>latitude</th>\n",
+       "        <th>longitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR7G5I41187FB4CE6C</td>\n",
+       "        <td>Adam Ant</td>\n",
+       "        <td>London, England</td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>Planet P Project</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARXR32B1187FB57099</td>\n",
+       "        <td>Gob</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR10USD1187B99F3F1</td>\n",
+       "        <td>Tweeterfriendly Music</td>\n",
+       "        <td>Burlington, Ontario, Canada</td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>JennyAnyKind</td>\n",
+       "        <td>North Carolina</td>\n",
+       "        <td>35.21962</td>\n",
+       "        <td>-80.01955</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('AR8ZCNI1187B9A069B', 'Planet P Project', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARXR32B1187FB57099', 'Gob', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('AR10USD1187B99F3F1', 'Tweeterfriendly Music', 'Burlington, Ontario, Canada', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', Decimal('35.21962'), Decimal('-80.01955'))]"
       ]
      },
      "execution_count": 7,
@@ -159,7 +374,7 @@
     }
    ],
    "source": [
-    "%sql SELECT * FROM songs LIMIT 5;"
+    "%sql SELECT * FROM artists LIMIT 5;"
    ]
   },
   {
@@ -172,46 +387,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://sm1:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>artist_id</th>\n",
-       "        <th>name</th>\n",
-       "        <th>location</th>\n",
-       "        <th>lattitude</th>\n",
-       "        <th>longitude</th>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%sql SELECT * FROM artists LIMIT 5;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://sm1:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -227,13 +403,62 @@
        "        <th>year</th>\n",
        "        <th>weekday</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-11 02:33:56.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-11 02:36:10.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-11 02:40:34.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-11 04:36:13.796000</td>\n",
+       "        <td>4</td>\n",
+       "        <td>11</td>\n",
+       "        <td>4</td>\n",
+       "        <td>11</td>\n",
+       "        <td>4</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-11 04:36:46.796000</td>\n",
+       "        <td>4</td>\n",
+       "        <td>11</td>\n",
+       "        <td>4</td>\n",
+       "        <td>11</td>\n",
+       "        <td>4</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(datetime.datetime(2018, 11, 11, 2, 33, 56, 796000), 2, 11, 2, 11, 2, 6),\n",
+       " (datetime.datetime(2018, 11, 11, 2, 36, 10, 796000), 2, 11, 2, 11, 2, 6),\n",
+       " (datetime.datetime(2018, 11, 11, 2, 40, 34, 796000), 2, 11, 2, 11, 2, 6),\n",
+       " (datetime.datetime(2018, 11, 11, 4, 36, 13, 796000), 4, 11, 4, 11, 4, 6),\n",
+       " (datetime.datetime(2018, 11, 11, 4, 36, 46, 796000), 4, 11, 4, 11, 4, 6)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
