--- a/etl.ipynb
+++ b/etl.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# ETL Processes\n",
-    "Use this notebook to develop the ETL process for each of your tables before completing the `etl.py` file to load the whole datasets."
+    "This notebook develops the ETL process for each of the tables before completing the `etl.py` file to load the whole datasets. "
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "# Process `song_data`\n",
-    "In this first part, you'll perform ETL on the first dataset, `song_data`, to create the `songs` and `artists` dimensional tables.\n",
+    "In this first part, I perform ETL on the first dataset, `song_data`, to create the `songs` and `artists` dimensional tables.\n",
     "\n",
     "Let's perform ETL on a single song file and load a single record into each table to start.\n",
     "- Use the `get_files` function provided above to get a list of all song JSON files in `data/song_data`\n",
@@ -1251,19 +1251,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ed9460cab835>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc[5]"
    ]
